# opencv-fingerprint

./: .gitignore  ArmToolchain.cmake  CMakeLists.txt  LICENSE  README.md
lib/binarisation/: AdaptiveLocalThreshold.cpp  AdaptiveLocalThreshold.h  CMakeLists.txt
lib/extraction/: CMakeLists.txt  CrossingNumber.cpp  CrossingNumber.h  Filter.cpp  Filter.h  Minutiae.cpp  Minutiae.h
lib/gap-optimisation/: CMakeLists.txt  GapOptimisation.cpp  GapOptimisation.h
lib/optimisation/: CMakeLists.txt  Ideka.cpp  Ideka.h
lib/thinning/: CMakeLists.txt  GuoHall.cpp  GuoHall.h  ZhangSuen.cpp  ZhangSuen.h
src/: BinarisationTest.cpp  GapOptimisationTest.cpp  ThinningTest.cpp
